<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="66dp"
        android:layout_marginTop="175dp"
        android:contentDescription="@string/login_title_page"
        android:fontFamily="@font/outfit_black"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="107dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/outfit_light"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textAlignment="viewStart"
        android:textColorHint="#999999"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Password Container -->
    <RelativeLayout
        android:id="@+id/passwordContainer"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/outfit_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:paddingEnd="48dp"
            android:textAlignment="viewStart"
            android:textColorHint="#999999" />

        <ImageButton
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_password_visibility"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_view"
            app:tint="#cccccc" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/remember_me"
        android:textColor="#8C8282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="58dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#FF9800"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/login_button"
        android:fontFamily="@font/outfit_semibold"
        android:minHeight="48dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FEFEFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:text="@string/dont_have_an_account"
        android:textColor="#8C8282"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/register"
        android:textColor="#FF9800"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>