<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="74dp"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/register_title_page"
        android:fontFamily="@font/outfit_black"
        android:text="@string/register"
        android:textColor="#FF9800"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/outfit_light"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textAlignment="viewStart"
        android:textColorHint="#999999"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="85dp"
        android:layout_height="33dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/outfit_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textAlignment="viewStart"
        android:textColorHint="#999999"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Password Container -->
    <RelativeLayout
        android:id="@+id/passwordContainer"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/outfit_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:paddingEnd="48dp"
            android:textAlignment="viewStart"
            android:textColorHint="#999999" />

        <ImageButton
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_password_visibility"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_view"
            app:tint="#cccccc" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="31dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/confirm_password"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Confirm Password Container -->
    <RelativeLayout
        android:id="@+id/confirmPasswordContainer"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/outfit_light"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:paddingEnd="48dp"
            android:textAlignment="viewStart"
            android:textColorHint="#999999" />

        <ImageButton
            android:id="@+id/toggleConfirmPasswordVisibility"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_confirm_password_visibility"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_view"
            app:tint="#cccccc" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/register_button"
        android:fontFamily="@font/outfit_semibold"
        android:minHeight="48dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FEFEFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordContainer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:text="@string/already_have_account"
        android:textColor="#8C8282"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/login"
        android:textColor="#FF9800"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>